--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author_email = 'revision279@gmail.com'
 description = 'this is samplel'
 long_description = file: README.md
 license = MIT
-url =
+url = https://github.com/arc279/model-in-package-sample
 
 
 [options]
